commit html work done

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,6 +5,29 @@
     <title>Film Club - Calendar</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Get Involved</h1>
+      <section>
+        
+      </section>
 
+    </main>
+    <footer>
+      <nav>
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
+      <span class>&copy 2017 Film Club</span>
+    </footer>
   </body>
 </html>
