--- a/index.html
+++ b/index.html
@@ -6,11 +6,53 @@
   </head>
   <body>
     <header>
-      
+      <nav class="site_nav">
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
     </header>
     <main>
+      <div class="top_page">
+        <h1>Get Involved</h1>
+        <section class="watch">
+          <h2>Watch</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section class="take_notes">
+          <h2>Take Notes</h2>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </section>
+        <section class="meetup">
+          <h2>Meetup</h2>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+      </div>
+      <div class="middle_page">
+        <h2>Up Next</h2>
+        <section class="rashomon">
+          <img src=""></img>
+
+        </section>
+        <section class="four_films">
+        </section>
+      </div>
     </main>
-    <footer>
+    <footer class="site_footer">
+      <nav class="site_nav">
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
+      <span class>&copy 2017 Film Club</span>
     </footer>
   </body>
 </html>
