added more html structure

--- a/index.html
+++ b/index.html
@@ -38,10 +38,38 @@
       <div class="middle_page">
         <h2>Up Next</h2>
         <section class="rashomon">
-          <img src=""></img>
-
+          <img src="images/rashomon.jpg">
+          <h1>Rashomon</h1>
+          <p>Film Club: 6/13</p>
+          <hr>
+          <h4>Discussion Points</h4>
+          <ul>
+            <li>perspective</li>
+            <li>balance</li>
+            <li>movement</li>
+            <li>emphasis</li>
+            <li>space</li>
+          </ul>
         </section>
-        <section class="four_films">
+        <section class="more_films">
+          <table class="four_films">
+            <tr>
+              <td><img src="images/great-train-poster.jpg"></td>
+              <caption class="movie_title">The Great Train Robbery</caption>
+              <caption class="film_club">Film Club:<strong>6/27</strong></caption>
+              <td><img src="images/bicycle-thief-poster.jpg"></td>
+              <caption class="movie_title">The Bicyle Thief</caption>
+              <caption class="film_club">Film Club:<strong>7/11</strong></caption>
+            </tr>
+            <tr>
+              <td><img src="images/nosferatu-poster.jpg"></td>
+              <caption class="movie_title">Nosferatu</caption>
+              <caption class="film_club">Film Club:<strong>7/25</strong></caption>
+              <td><img src="images/metropolis-poster.jpg"></td>
+              <caption class="movie_title">Metropolis</caption>
+              <caption class="film_club">Film Club:<strong>8/08</strong></caption>
+            </tr>
+          </table>
         </section>
       </div>
     </main>
@@ -52,7 +80,7 @@
         <a href="calendar/index.html">Calendar</a>
         <a href="join/index.html">Join</a>
       </nav>
-      <span class>&copy 2017 Film Club</span>
+      <span class="copyright">&copy 2017 Film Club</span>
     </footer>
   </body>
 </html>
