--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Film Club</title>
   </head>
   <body>
@@ -16,29 +17,29 @@
     <main>
       <div class="top_page">
         <h1>Get Involved</h1>
-        <section class="watch">
+        <div class="watch">
           <h2>Watch</h2>
           <p>Lorem ipsum dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua.</p>
-        </section>
-        <section class="take_notes">
+        </div>
+        <div class="take_notes">
           <h2>Take Notes</h2>
           <p>Ut enim ad minim veniam, quis nostrud exercitation
             ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </section>
-        <section class="meetup">
+        </div>
+        <div class="meetup">
           <h2>Meetup</h2>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum.</p>
-        </section>
+        </div>
       </div>
       <div class="middle_page">
         <h2>Up Next</h2>
-        <section class="rashomon">
-          <img src="images/rashomon.jpg">
+        <div class="rashomon">
+          <img src="images/rashomon-poster.jpg">
           <h1>Rashomon</h1>
           <p>Film Club: 6/13</p>
           <hr>
@@ -50,27 +51,25 @@
             <li>emphasis</li>
             <li>space</li>
           </ul>
-        </section>
-        <section class="more_films">
-          <table class="four_films">
-            <tr>
-              <td><img src="images/great-train-poster.jpg"></td>
-              <caption class="movie_title">The Great Train Robbery</caption>
-              <caption class="film_club">Film Club:<strong>6/27</strong></caption>
-              <td><img src="images/bicycle-thief-poster.jpg"></td>
-              <caption class="movie_title">The Bicyle Thief</caption>
-              <caption class="film_club">Film Club:<strong>7/11</strong></caption>
-            </tr>
-            <tr>
-              <td><img src="images/nosferatu-poster.jpg"></td>
-              <caption class="movie_title">Nosferatu</caption>
-              <caption class="film_club">Film Club:<strong>7/25</strong></caption>
-              <td><img src="images/metropolis-poster.jpg"></td>
-              <caption class="movie_title">Metropolis</caption>
-              <caption class="film_club">Film Club:<strong>8/08</strong></caption>
-            </tr>
-          </table>
-        </section>
+        </div>
+        <div class="four_films">
+          <div class="firstrow">
+            <img src="images/great-train-poster.jpg">
+            <caption class="movie_title">The Great Train Robbery</caption>
+            <caption class="film_club">Film Club:<strong>6/27</strong></caption>
+            <img src="images/bicycle-thief-poster.jpg">
+            <caption class="movie_title">The Bicyle Thief</caption>
+            <caption class="film_club">Film Club:<strong>7/11</strong></caption>
+          </div>
+          <div class="secondrow">
+            <img src="images/nosferatu-poster.jpg">
+            <caption class="movie_title">Nosferatu</caption>
+            <caption class="film_club">Film Club:<strong>7/25</strong></caption>
+            <img src="images/metropolis-poster.jpg">
+            <caption class="movie_title">Metropolis</caption>
+            <caption class="film_club">Film Club:<strong>8/08</strong></caption>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="site_footer">
