--- a/join/index.html
+++ b/join/index.html
@@ -5,6 +5,24 @@
     <title>Film Club - Join</title>
   </head>
   <body>
-
+    <header>
+      <nav>
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
+    </header>
+    <main>
+    </main>
+    <footer>
+      <nav>
+        <img src="images/filmclub.png" alt="Film Club Logo">
+        <a href="index.html">Home</a>
+        <a href="calendar/index.html">Calendar</a>
+        <a href="join/index.html">Join</a>
+      </nav>
+      <span class>&copy 2017 Film Club</span>
+    </footer>
   </body>
 </html>
