latest project changes

--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Film Club</title>
   </head>
   <body>
-    <header>
-      <nav class="site_nav">
+    <header id="site_header">
+      <div class="site_nav">
         <img src="images/filmclub.png" alt="Film Club Logo">
-        <a href="index.html">Home</a>
-        <a href="calendar/index.html">Calendar</a>
-        <a href="join/index.html">Join</a>
-      </nav>
+        <a href="index.html" class="homelink">Home</a>
+        <a href="calendar/index.html" class="callink">Calendar</a>
+        <a href="join/index.html" class="joinlink">Join</a>
+      </div>
     </header>
     <main>
+      <div id="top_page_title">Get Involved</div>
       <div class="top_page">
-        <h1>Get Involved</h1>
         <div class="watch">
-          <h2>Watch</h2>
+          <span class="sectiontitle">Watch</span>
           <p>Lorem ipsum dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="take_notes">
-          <h2>Take Notes</h2>
+          <span class="sectiontitle">Take Notes</span>
           <p>Ut enim ad minim veniam, quis nostrud exercitation
             ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
         <div class="meetup">
-          <h2>Meetup</h2>
+          <span class="sectiontitle">Meetup</span>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in
@@ -72,14 +73,14 @@
         </div>
       </div>
     </main>
-    <footer class="site_footer">
-      <nav class="site_nav">
+    <footer id="site_footer">
+      <div class="site_nav">
         <img src="images/filmclub.png" alt="Film Club Logo">
-        <a href="index.html">Home</a>
-        <a href="calendar/index.html">Calendar</a>
-        <a href="join/index.html">Join</a>
-      </nav>
-      <span class="copyright">&copy 2017 Film Club</span>
+        <a href="index.html" class="homelink">Home</a>
+        <a href="calendar/index.html" class="callink">Calendar</a>
+        <a href="join/index.html" class="joinlink">Join</a>
+      </div>
+      <span id="copyright">&copy 2017 Film Club</span>
     </footer>
   </body>
 </html>
