commit large homepage changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="middle_page">
-        <h2>Up Next</h2>
+        <span class="upnext">Up Next</span>
         <div class="rashomon">
           <img src="images/rashomon-poster.jpg">
           <h1>Rashomon</h1>
