turn in project

--- a/index.html
+++ b/index.html
@@ -38,20 +38,24 @@
         </div>
       </div>
       <div class="middle_page">
-        <span class="upnext">Up Next</span>
+        <div class="upnext">Up Next</div>
         <div class="rashomon">
-          <img src="images/rashomon-poster.jpg">
-          <h1>Rashomon</h1>
-          <p>Film Club: 6/13</p>
-          <hr>
-          <h4>Discussion Points</h4>
-          <ul>
-            <li>perspective</li>
-            <li>balance</li>
-            <li>movement</li>
-            <li>emphasis</li>
-            <li>space</li>
-          </ul>
+          <div class="movie_img">
+            <img src="images/rashomon-poster.jpg">
+          </div>
+          <div class="movie_info">
+            <h1>Rashomon</h1>
+            <p>Film Club: 6/13</p>
+            <hr>
+            <h4>Discussion Points</h4>
+            <ul>
+              <li>perspective</li>
+              <li>balance</li>
+              <li>movement</li>
+              <li>emphasis</li>
+              <li>space</li>
+            </ul>
+          </div>
         </div>
         <div class="four_films">
           <div class="firstrow">
